Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4403

HostDB's "stale while revalidate" doesn't span failed DNS lookups

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.2, 6.2.0, 7.0.0
    • None

    Description

      Right now if you set stale_while_revalidate hostdb will return the stale record while waiting on the DNS lookup. In the event that you have the DNS timeout set low (lets say 1 second) and the DNS server times out (lets say due to an outage of your resolver) then ATS will start replacing all of your stale entries (which were working) with error timeout entries (which are empty)-- which is bad.

      The stale while revalidate configuration should serve stale records until a valid response from DNS comes back-- the patch here should be relatively simple, just a bit of a nuisance to test since DNS requires port 53

      Attachments

        Issue Links

          Activity

            People

              jacksontj Thomas Jackson
              jacksontj Thomas Jackson
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: